пофиксил модалки, добавил ховер-анимацию

--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -195,9 +195,9 @@
         </ul>
 
         <div class="menu">
-          <a href="tel:+79151678864">8 915 167 88 64</a>
-          <button type="button" class="btn1" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Получить консультацию
+          <a class="button-white" href="tel:+79151678864">8 915 167 88 64</a>
+          <button type="button" class="btn1 button-blue" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Получить консультацию
           </button>
         </div>
       </div>
@@ -309,11 +309,11 @@
           </div>
           <div class="footer-menu">
             <div class="footer__buttons" style="display: flex; gap: 8px">
-              <a class="btn2" style="border: 1px solid white" href="tel:+79151678864">
+              <a class="btn2 button-blue" href="tel:+79151678864">
                 8 915 167 88 64
               </a>
 
-              <button type="button" class="btn1" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              <button type="button" class="btn1 button-white" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Получить консультацию
               </button>
             </div>
@@ -351,7 +351,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade amo-form" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg footer__modal">
             <div class="modal-content">
               <div class="modal-header">
