--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -179,12 +179,12 @@
             </a>
           </li>
           <li class="nav-item p-1">
-            <a class="nav-link" aria-current="page" href="https://t.me/angelina_KPG">
+            <a class="nav-link" aria-current="page" href="https://t.me/MBA_Partner">
               <i class="fa-brands fa-telegram fa-3xl" style="color: #2b3455; width: 32px; height: 32px"></i>
             </a>
           </li>
           <li class="nav-item p-1">
-            <a class="nav-link" aria-current="page" href="tel:+79160050999">
+            <a class="nav-link" aria-current="page" href="tel:+79671328133">
               <img style="
                     width: 32px;
                     object-fit: scale-down;
@@ -195,7 +195,7 @@
         </ul>
 
         <div class="menu">
-          <a class="button-white" href="tel:+79151678864">8 915 167 88 64</a>
+          <a class="button-white" href="tel:+79671328133">8 967 132 81 33</a>
           <button type="button" class="btn1 button-blue" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Получить консультацию
           </button>
@@ -284,8 +284,8 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="tel:+79160050999">
-                    +79160050999
+                  <a class="nav-link" aria-current="page" href="tel:+79671328133">
+                    +79671328133
                   </a>
                 </li>
                 <p class="mb-2" style="
@@ -309,8 +309,8 @@
           </div>
           <div class="footer-menu">
             <div class="footer__buttons" style="display: flex; gap: 8px">
-              <a class="btn2 button-blue" href="tel:+79151678864">
-                8 915 167 88 64
+              <a class="btn2 button-blue" href="tel:+79671328133">
+                8 967 132 81 33
               </a>
 
               <button type="button" class="btn1 button-white" data-bs-toggle="modal" data-bs-target="#exampleModal">
@@ -319,7 +319,7 @@
             </div>
             <div class="footer-socials">
               <div class="text-center">
-                <a class="nav-link footer__nav-link" aria-current="page" href="https://t.me/angelina_KPG">
+                <a class="nav-link footer__nav-link" aria-current="page" href="https://t.me/MBA_Partner">
                   <i class="fa-brands fa-telegram fa-2xl" style="color: white"></i>
                 </a>
               </div>
