--- a/homeapp/templates/homeapp/index.html
+++ b/homeapp/templates/homeapp/index.html
@@ -132,7 +132,7 @@
           </div>
 
           <div style="display: flex; gap: 16px">
-            <a class="btn2 button-blue">Все услуги</a>
+            <a class="btn2 button-blue" href="{% url 'homeapp:tariffs' %}">Тарифы</a>
             <button type="button" class="btn1 button-white" data-bs-toggle="modal" data-bs-target="#exampleModal">
               Заказать звонок
             </button>
