--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -148,11 +148,29 @@
               Практика адвокатов
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="{% url 'homeapp:team' %}">
-              Адвокаты
-            </a>
-          </li>
+          <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Адвокаты
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="{% url 'homeapp:team' %}">
+                    Офис в Москве
+                  </a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="https://mkapartner.ru/">
+                    Филиал в Ульяновске
+                  </a>
+                </li>
+              </ul>
+            </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="{% url 'homeapp:news_list' %}">
               Новости
