--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -274,11 +274,29 @@
                   </ul>
                 </li>
 
-                <li class="nav-item nav_footer">
-                  <a class="nav-link" aria-current="page" href="{% url 'homeapp:team' %}">
-                    Адвокаты
+                <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Адвокаты
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="{% url 'homeapp:team' %}">
+                    Офис в Москве
                   </a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="https://mkapartner.ru/">
+                    Филиал в Ульяновске
+                  </a>
+                </li>
+              </ul>
+            </li>
 
                 <li class="nav-item nav_footer">
                   <a class="nav-link" aria-current="page" href="{% url 'homeapp:cases' %}">
