--- a/homeapp/static/homeapp/css/style.css
+++ b/homeapp/static/homeapp/css/style.css
@@ -1223,6 +1223,23 @@ button:focus {
   margin-top: auto;
 }
 
+.tarif  {
+  background-color: #f7f9ff;
+}
+
+.tarif .card-header {
+  min-height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  background-color: var(--blue);
+}
+
+.tarif .card-body {
+  display: flex;
+  flex-direction: column;
+}
 
 @media screen and (max-width: 1200px) {
   .cases__item {
@@ -1280,6 +1297,10 @@ button:focus {
 
   .slick-arrow {
     top: -48px !important;
+  }
+
+  .page-section {
+    padding: 16px;
   }
 }
 
