--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -106,7 +106,7 @@
         <img src="{% static 'homeapp/img/logo.png' %}" alt="" />
       </a>
       <a style="width: 22px;height: 38px;" href="" class="logo-mob">
-        <img style="width: 100%;height: fit-content; object-fit: contain;"
+        <img style="width: 100%;height: auto; object-fit: contain;"
           src="{% static 'homeapp/img/Frame 1000000988.png' %}" alt="" alt="">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
