--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -109,12 +109,17 @@
         <img style="width: 100%;height: auto; object-fit: contain;"
           src="{% static 'homeapp/img/Frame 1000000988.png' %}" alt="" alt="">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span style="border: none;">
-          <img style="width: 24px; height: 24px; background:#2A3554;" src="{% static 'homeapp/img/sort.svg' %}" alt="">
-        </span>
-      </button>
+      <div class="d-flex gap-2">
+        <button type="button" class="btn1 button-blue d-xl-none" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Получить консультацию
+        </button>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span style="border: none;">
+            <img style="width: 24px; height: 24px; background:#2A3554;" src="{% static 'homeapp/img/sort.svg' %}" alt="">
+          </span>
+        </button>
+      </div>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 top-menu">
           <li class="nav-item">
@@ -193,7 +198,7 @@
         </ul>
 
         <ul
-          class="socials navbar-nav list-group-horizontal ms-auto mb-2 mt-2 mb-lg-0 mt-lg-0 justify-content-center icon-nav pt-1">
+          class="socials align-items-center navbar-nav list-group-horizontal ms-auto mb-2 mt-2 mb-lg-0 mt-lg-0 justify-content-center icon-nav pt-1">
           <li class="nav-item p-1">
             <a class="nav-link" aria-current="page"
               href="https://www.instagram.com/advocate_konstantinova_pg?utm_source=qr">
@@ -206,7 +211,11 @@
           </li>
           <li class="nav-item p-1">
             <a class="nav-link" aria-current="page" href="https://t.me/MBA_Partner">
-              <i class="fa-brands fa-telegram fa-3xl" style="color: #2b3455; width: 32px; height: 32px"></i>
+              <img style="
+                    width: 32px;
+                    object-fit: scale-down;
+                    height: fit-content;
+                  " src="{% static 'homeapp/img/Telegram.png' %}" alt="" />
             </a>
           </li>
           <li class="nav-item p-1">
