--- a/homeapp/templates/homeapp/base.html
+++ b/homeapp/templates/homeapp/base.html
@@ -110,7 +110,7 @@
           src="{% static 'homeapp/img/Frame 1000000988.png' %}" alt="" alt="">
       </a>
       <div class="d-flex gap-2">
-        <button type="button" class="btn1 button-blue d-xl-none" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button type="button" class="btn1 button-blue button__header d-xl-none" data-bs-toggle="modal" data-bs-target="#exampleModal">
           Получить консультацию
         </button>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -231,9 +231,6 @@
 
         <div class="menu">
           <a class="button-white" href="tel:+79671328133">8 967 132 81 33</a>
-          <button type="button" class="btn1 button-blue" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            Получить консультацию
-          </button>
         </div>
       </div>
     </div>
