--- a/homeapp/templates/homeapp/index.html
+++ b/homeapp/templates/homeapp/index.html
@@ -20,7 +20,7 @@
       <p class="hero__subtitle">
         Сила в знании, справедливость в действии: ваша защита – наша миссия!
       </p>
-      <button type="button"class="button-white"  data-bs-toggle="modal" data-bs-target="#exampleModal">
+      <button type="button" class="button-white" data-bs-toggle="modal" data-bs-target="#exampleModal">
         Получить консультацию
       </button>
     </div>
@@ -652,7 +652,6 @@
             <li class="list-group-item">{{ partner.min_context3 }}</li>
             <li class="list-group-item">{{ partner.min_context4 }}</li>
           </ul>
-          <div class="filling"></div>
           <div class="diploms slider">
             {% for photo in partner.photos.all %}
             <div class="slide team__slide">
@@ -689,8 +688,39 @@
   </div>
 </section>
 
+<!--================ Новости =================-->
+{% if News %}
+<section class="news-section container">
+  <div class="page-section">
+    <div class="news_feed_header">
+      <h1 class="page-section__title">Новости и публикации</h1>
+    </div>
+    <div class="news-section__content news_feed_content swiper mySlider">
+      <div class="news_content_wrapper swiper-wrapper">
+        {% for news in News %}
+        <a class="swiper-slide" href="/news_{{ news.slug }}">
+          <div class="news_item">
+            <div class="news_content-group">
+              <div class="news__header">
+                <h1 class="news__title">{{ news.title }}</h1>
+                <p class="text-end news__date">{{ news.create_datetime }}</p>
+              </div>
+              <div class="news_item_content">
+                <p>{{ news.text|safe }}</p>
+              </div>
+            </div>
+            <div class="news_item_fakelink">Подробнее</div>
+          </div>
+        </a>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+</section>
+{% endif %}
+
 <!--================ презентация =================-->
-<div class="cta-area section_gap overlay">
+<div class="cta-area section_gap overlay mt">
   <div class="container">
     <div>
       <div style="background: rgb(42, 53, 84); color: white;    padding: 32px;">
@@ -767,60 +797,4 @@
 </div>
 
 {#slider#}
-<!--================ Новости =================-->
-{% comment %} {% if News %}
-<section class="news container">
-  <div class="news_feed_header">
-    <h1>Новости и публикации</h1>
-  </div>
-  <div class="news_feed_content mt-5">
-    <div class="row">
-      <!-- Самая свежая новость -->
-      {% if News %}
-      <div class="col-md-5">
-        <div class="news_item latest_news">
-          <div class="news_item_header">
-            <p class="text-end">{{ News.0.create_datetime }}</p>
-            <h2>{{ News.0.title }}</h2>
-          </div>
-          <div class="news_item_content">
-            <p>{{ News.0.text|safe|truncatechars:100 }}</p>
-          </div>
-          <div class="button-container" style="text-align: right">
-            <a href="/news_{{ News.0.slug }}" class="btn btn-primary">
-              Читать далее
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Остальные новости -->
-      <div class="col-md-6">
-        <ul class="list_of_news">
-          {% for news in News|slice:"1:6" %}
-          <li class="news-line">
-            <div class="news_item_content line">
-              <p>
-                {{ news.create_datetime|date:"d-m-Y H:i:s" }} -
-                <a href="/news_{{ news.slug }}">{{ news.title }}</a>
-              </p>
-            </div>
-            {% comment %}
-            <div class="news_item_content line" style="
-                background-color: rgba(0, 90, 255, 0.05);
-                border-radius: 5px;
-              ">
-              <p>
-                {{ news.create_datetime }} -
-                <a href="/news_{{ news.slug }}">{{ news.title }}</a>
-              </p>
-            </div>
-          </li>
-          {% endfor %}
-        </ul>
-      </div>
-      {% endif %}
-    </div>
-  </div>
-</section>
-{% endif %}{% endcomment %} {% endblock %}
+{% endblock %}
